--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     </ul>
   </div>
 </nav>
-<div style="width: 100%; height: 100%;">
+<div style="width: 100%; height: 100%; margin-top: 50px;">
   <as-split direction="horizontal">
     <as-split-area [size]="40">
       <ngx-monaco-editor [options]="editorOptions" [ngModel]="code" (ngModelChange)="jsonChanged($event)" style="height: 100%" placeholder="Enter a json here"></ngx-monaco-editor>
